--- a/JANE.v4.cbp
+++ b/JANE.v4.cbp
@@ -6,40 +6,64 @@
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
 		<Build>
-			<Target title="Release Win32">
+			<Target title="Release Linux">
 				<Option output="JANE" prefix_auto="1" extension_auto="1" />
+				<Option object_output="objs/Release/" />
 				<Option type="0" />
 				<Option compiler="gcc" />
 				<Compiler>
-					<Add directory="$(INCLUDE)" />
+					<Add option="-O2" />
 				</Compiler>
 				<Linker>
-					<Add directory="$(LIB)" />
-					<Add directory="$(LIB)/x86" />
+					<Add option="-s" />
 				</Linker>
 			</Target>
-			<Target title="Debug Win32">
+			<Target title="Debug Linux">
 				<Option output="JANE" prefix_auto="1" extension_auto="1" />
+				<Option object_output="objs/Debug/" />
+				<Option type="0" />
+				<Option compiler="gcc" />
+				<Option projectIncludeDirsRelation="2" />
+				<Compiler>
+					<Add option="-g" />
+					<Add option="-DWRITE_LOG" />
+					<Add directory="/usr/local/include/" />
+				</Compiler>
+				<Linker>
+					<Add directory="/usr/local/lib/" />
+				</Linker>
+			</Target>
+			<Target title="Release Pandora">
+				<Option output="bin/Pandora/JANE" prefix_auto="1" extension_auto="1" />
+				<Option object_output="objs/Pandora/" />
 				<Option type="0" />
 				<Option compiler="gcc" />
 				<Compiler>
-					<Add option="-DWRITE_LOG" />
-					<Add directory="$(INCLUDE)" />
+					<Add option="-O2" />
 				</Compiler>
 				<Linker>
-					<Add directory="$(LIB)" />
-					<Add directory="$(LIB)/x86" />
+					<Add option="-s" />
 				</Linker>
 			</Target>
 		</Build>
 		<Compiler>
+			<Add option="-std=c++11" />
+			<Add option="-Wall" />
 			<Add option="-DLINUX" />
 			<Add option="-DNETWORK_SUPPORT" />
+			<Add option="-DDOWNLOAD_SUPPORT" />
 		</Compiler>
 		<Linker>
-			<Add library="enet" />
 			<Add library="allegro" />
-			<Add library="allegro_main" />
+			<Add library="allegro_audio" />
+			<Add library="allegro_acodec" />
+			<Add library="allegro_font" />
+			<Add library="allegro_ttf" />
+			<Add library="allegro_primitives" />
+			<Add library="allegro_color" />
+			<Add library="allegro_image" />
+			<Add library="enet" />
+			<Add library="curl" />
 		</Linker>
 		<Unit filename="Framework/Display/animation.cpp" />
 		<Unit filename="Framework/Display/animation.h" />
@@ -130,12 +154,6 @@
 		<Unit filename="Game/menu.h" />
 		<Unit filename="Game/settingskeyset.cpp" />
 		<Unit filename="Game/settingskeyset.h" />
-		<Unit filename="Scripting/my_basic.c">
-			<Option compilerVar="CC" />
-		</Unit>
-		<Unit filename="Scripting/my_basic.h" />
-		<Unit filename="Scripting/scriptengine.cpp" />
-		<Unit filename="Scripting/scriptengine.h" />
 		<Extensions>
 			<envvars />
 			<code_completion />
