--- a/JANE.v4.vcxproj
+++ b/JANE.v4.vcxproj
@@ -98,7 +98,7 @@
     <ClCompile Include="Framework\Forms\graphicbutton.cpp" />
     <ClCompile Include="Framework\Forms\hscrollbar.cpp" />
     <ClCompile Include="Framework\Forms\label.cpp" />
-    <ClCompile Include="Framework\Forms\list.cpp" />
+    <ClCompile Include="Framework\Forms\listbox.cpp" />
     <ClCompile Include="Framework\Forms\textbutton.cpp" />
     <ClCompile Include="Framework\Forms\textedit.cpp" />
     <ClCompile Include="Framework\Forms\vscrollbar.cpp" />
@@ -110,6 +110,8 @@
     <ClCompile Include="Framework\Primitives\angle.cpp" />
     <ClCompile Include="Framework\Primitives\box.cpp" />
     <ClCompile Include="Framework\Primitives\line.cpp" />
+    <ClCompile Include="Framework\Primitives\list.cpp" />
+    <ClCompile Include="Framework\Primitives\polygon.cpp" />
     <ClCompile Include="Framework\Primitives\vector2.cpp" />
     <ClCompile Include="Framework\Primitives\vector2i.cpp" />
     <ClCompile Include="Framework\Sound\audio.cpp" />
@@ -121,7 +123,23 @@
     <ClCompile Include="Framework\Transitions\strips.cpp" />
     <ClCompile Include="Framework\Transitions\tiled.cpp" />
     <ClCompile Include="Game\boot.cpp" />
+    <ClCompile Include="Game\Entities\combatant.cpp" />
+    <ClCompile Include="Game\Entities\panel.cpp" />
+    <ClCompile Include="Game\Entities\panelsheet.cpp" />
+    <ClCompile Include="Game\Entities\room.cpp" />
+    <ClCompile Include="Game\Entities\roomzone.cpp" />
+    <ClCompile Include="Game\Entities\world.cpp" />
     <ClCompile Include="Game\menu.cpp" />
+    <ClCompile Include="Game\Paletted\palette.cpp" />
+    <ClCompile Include="Game\Paletted\palettedbitmap.cpp" />
+    <ClCompile Include="Game\Paletted\palettedbitmapcache.cpp" />
+    <ClCompile Include="Game\recordbuffer.cpp" />
+    <ClCompile Include="Game\resources.cpp" />
+    <ClCompile Include="Game\roomdesigner.cpp" />
+    <ClCompile Include="Game\roomdesigner_enemy.cpp" />
+    <ClCompile Include="Game\roomdesigner_object.cpp" />
+    <ClCompile Include="Game\roomdesigner_panel.cpp" />
+    <ClCompile Include="Game\roomdesigner_zone.cpp" />
     <ClCompile Include="Game\settingskeyset.cpp" />
     <ClCompile Include="Scripting\my_basic.c" />
     <ClCompile Include="Scripting\scriptengine.cpp" />
@@ -145,7 +163,7 @@
     <ClInclude Include="Framework\Forms\graphicbutton.h" />
     <ClInclude Include="Framework\Forms\hscrollbar.h" />
     <ClInclude Include="Framework\Forms\label.h" />
-    <ClInclude Include="Framework\Forms\list.h" />
+    <ClInclude Include="Framework\Forms\listbox.h" />
     <ClInclude Include="Framework\Forms\textbutton.h" />
     <ClInclude Include="Framework\Forms\textedit.h" />
     <ClInclude Include="Framework\Forms\vscrollbar.h" />
@@ -158,6 +176,8 @@
     <ClInclude Include="Framework\Primitives\angle.h" />
     <ClInclude Include="Framework\Primitives\box.h" />
     <ClInclude Include="Framework\Primitives\line.h" />
+    <ClInclude Include="Framework\Primitives\list.h" />
+    <ClInclude Include="Framework\Primitives\polygon.h" />
     <ClInclude Include="Framework\Primitives\strings.h" />
     <ClInclude Include="Framework\Primitives\vector2.h" />
     <ClInclude Include="Framework\Primitives\vector2i.h" />
@@ -172,8 +192,20 @@
     <ClInclude Include="Framework\Transitions\tiled.h" />
     <ClInclude Include="Framework\Transitions\transitions.h" />
     <ClInclude Include="Game\boot.h" />
+    <ClInclude Include="Game\Entities\combatant.h" />
+    <ClInclude Include="Game\Entities\panel.h" />
+    <ClInclude Include="Game\Entities\panelsheet.h" />
+    <ClInclude Include="Game\Entities\room.h" />
+    <ClInclude Include="Game\Entities\roomzone.h" />
+    <ClInclude Include="Game\Entities\world.h" />
     <ClInclude Include="Game\includes.h" />
     <ClInclude Include="Game\menu.h" />
+    <ClInclude Include="Game\Paletted\palette.h" />
+    <ClInclude Include="Game\Paletted\palettedbitmap.h" />
+    <ClInclude Include="Game\Paletted\palettedbitmapcache.h" />
+    <ClInclude Include="Game\recordbuffer.h" />
+    <ClInclude Include="Game\resources.h" />
+    <ClInclude Include="Game\roomdesigner.h" />
     <ClInclude Include="Game\settingskeyset.h" />
     <ClInclude Include="Scripting\my_basic.h" />
     <ClInclude Include="Scripting\scriptengine.h" />
