--- a/JANE.v4.cbp
+++ b/JANE.v4.cbp
@@ -95,8 +95,8 @@
 		<Unit filename="Framework/Forms/hscrollbar.h" />
 		<Unit filename="Framework/Forms/label.cpp" />
 		<Unit filename="Framework/Forms/label.h" />
-		<Unit filename="Framework/Forms/list.cpp" />
-		<Unit filename="Framework/Forms/list.h" />
+		<Unit filename="Framework/Forms/listbox.cpp" />
+		<Unit filename="Framework/Forms/listbox.h" />
 		<Unit filename="Framework/Forms/textbutton.cpp" />
 		<Unit filename="Framework/Forms/textbutton.h" />
 		<Unit filename="Framework/Forms/textedit.cpp" />
@@ -174,6 +174,8 @@
 		<Unit filename="Game/includes.h" />
 		<Unit filename="Game/menu.cpp" />
 		<Unit filename="Game/menu.h" />
+		<Unit filename="Game/recordbuffer.cpp" />
+		<Unit filename="Game/recordbuffer.h" />
 		<Unit filename="Game/resources.cpp" />
 		<Unit filename="Game/resources.h" />
 		<Unit filename="Game/roomdesigner.cpp" />
