--- a/JANE.v4.cbp
+++ b/JANE.v4.cbp
@@ -178,12 +178,20 @@
 		<Unit filename="Game/recordbuffer.h" />
 		<Unit filename="Game/resources.cpp" />
 		<Unit filename="Game/resources.h" />
-		<Unit filename="Game/roomdesigner.cpp" />
-		<Unit filename="Game/roomdesigner.h" />
-		<Unit filename="Game/roomdesigner_enemy.cpp" />
-		<Unit filename="Game/roomdesigner_object.cpp" />
-		<Unit filename="Game/roomdesigner_panel.cpp" />
-		<Unit filename="Game/roomdesigner_zone.cpp" />
+		<Unit filename="Game/Editor/panelselector.cpp" />
+		<Unit filename="Game/Editor/panelselector.h" />
+		<Unit filename="Game/Editor/roomdesigner.cpp" />
+		<Unit filename="Game/Editor/roomdesigner.h" />
+		<Unit filename="Game/Editor/roomdesigner_background.cpp" />
+		<Unit filename="Game/Editor/roomdesigner_background.h" />
+		<Unit filename="Game/Editor/roomdesigner_enemy.cpp" />
+		<Unit filename="Game/Editor/roomdesigner_enemy.h" />
+		<Unit filename="Game/Editor/roomdesigner_object.cpp" />
+		<Unit filename="Game/Editor/roomdesigner_object.h" />
+		<Unit filename="Game/Editor/roomdesigner_panel.cpp" />
+		<Unit filename="Game/Editor/roomdesigner_panel.h" />
+		<Unit filename="Game/Editor/roomdesigner_zone.cpp" />
+		<Unit filename="Game/Editor/roomdesigner_zone.h" />
 		<Unit filename="Game/settingskeyset.cpp" />
 		<Unit filename="Game/settingskeyset.h" />
 		<Unit filename="Scripting/my_basic.c">
