--- a/JANE.v4.vcxproj
+++ b/JANE.v4.vcxproj
@@ -123,6 +123,7 @@
     <ClCompile Include="Framework\Transitions\strips.cpp" />
     <ClCompile Include="Framework\Transitions\tiled.cpp" />
     <ClCompile Include="Game\boot.cpp" />
+    <ClCompile Include="Game\Editor\panelselector.cpp" />
     <ClCompile Include="Game\Entities\combatant.cpp" />
     <ClCompile Include="Game\Entities\panel.cpp" />
     <ClCompile Include="Game\Entities\panelsheet.cpp" />
@@ -135,13 +136,13 @@
     <ClCompile Include="Game\Paletted\palettedbitmapcache.cpp" />
     <ClCompile Include="Game\recordbuffer.cpp" />
     <ClCompile Include="Game\resources.cpp" />
-    <ClCompile Include="Game\roomdesigner.cpp" />
-    <ClCompile Include="Game\roomdesigner_background.cpp" />
-    <ClCompile Include="Game\roomdesigner_enemy.cpp" />
-    <ClCompile Include="Game\roomdesigner_mode.cpp" />
-    <ClCompile Include="Game\roomdesigner_object.cpp" />
-    <ClCompile Include="Game\roomdesigner_panel.cpp" />
-    <ClCompile Include="Game\roomdesigner_zone.cpp" />
+    <ClCompile Include="Game\Editor\roomdesigner.cpp" />
+    <ClCompile Include="Game\Editor\roomdesigner_background.cpp" />
+    <ClCompile Include="Game\Editor\roomdesigner_enemy.cpp" />
+    <ClCompile Include="Game\Editor\roomdesigner_mode.cpp" />
+    <ClCompile Include="Game\Editor\roomdesigner_object.cpp" />
+    <ClCompile Include="Game\Editor\roomdesigner_panel.cpp" />
+    <ClCompile Include="Game\Editor\roomdesigner_zone.cpp" />
     <ClCompile Include="Game\settingskeyset.cpp" />
     <ClCompile Include="Scripting\my_basic.c" />
     <ClCompile Include="Scripting\scriptengine.cpp" />
@@ -194,6 +195,7 @@
     <ClInclude Include="Framework\Transitions\tiled.h" />
     <ClInclude Include="Framework\Transitions\transitions.h" />
     <ClInclude Include="Game\boot.h" />
+    <ClInclude Include="Game\Editor\panelselector.h" />
     <ClInclude Include="Game\Entities\combatant.h" />
     <ClInclude Include="Game\Entities\panel.h" />
     <ClInclude Include="Game\Entities\panelsheet.h" />
@@ -207,13 +209,13 @@
     <ClInclude Include="Game\Paletted\palettedbitmapcache.h" />
     <ClInclude Include="Game\recordbuffer.h" />
     <ClInclude Include="Game\resources.h" />
-    <ClInclude Include="Game\roomdesigner.h" />
-    <ClInclude Include="Game\roomdesigner_background.h" />
-    <ClInclude Include="Game\roomdesigner_enemy.h" />
-    <ClInclude Include="Game\roomdesigner_mode.h" />
-    <ClInclude Include="Game\roomdesigner_object.h" />
-    <ClInclude Include="Game\roomdesigner_panel.h" />
-    <ClInclude Include="Game\roomdesigner_zone.h" />
+    <ClInclude Include="Game\Editor\roomdesigner.h" />
+    <ClInclude Include="Game\Editor\roomdesigner_background.h" />
+    <ClInclude Include="Game\Editor\roomdesigner_enemy.h" />
+    <ClInclude Include="Game\Editor\roomdesigner_mode.h" />
+    <ClInclude Include="Game\Editor\roomdesigner_object.h" />
+    <ClInclude Include="Game\Editor\roomdesigner_panel.h" />
+    <ClInclude Include="Game\Editor\roomdesigner_zone.h" />
     <ClInclude Include="Game\settingskeyset.h" />
     <ClInclude Include="Scripting\my_basic.h" />
     <ClInclude Include="Scripting\scriptengine.h" />
