--- a/JANE.v4.cbp
+++ b/JANE.v4.cbp
@@ -52,6 +52,7 @@
 			<Add option="-DLINUX" />
 			<Add option="-DNETWORK_SUPPORT" />
 			<Add option="-DDOWNLOAD_SUPPORT" />
+			<Add option="-DSQLITE_THREADSAFE=0" />
 		</Compiler>
 		<Linker>
 			<Add library="allegro" />
@@ -64,7 +65,14 @@
 			<Add library="allegro_image" />
 			<Add library="enet" />
 			<Add library="curl" />
+			<Add library="dl" />
 		</Linker>
+		<Unit filename="Data/sqlite3.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="Data/sqlite3.h" />
+		<Unit filename="Data/sqlitedb.cpp" />
+		<Unit filename="Data/sqlitedb.h" />
 		<Unit filename="Framework/Display/animation.cpp" />
 		<Unit filename="Framework/Display/animation.h" />
 		<Unit filename="Framework/Display/bitmapcache.cpp" />
