--- a/JANE.v4.vcxproj
+++ b/JANE.v4.vcxproj
@@ -128,6 +128,7 @@
     <ClCompile Include="Game\debugstage.cpp" />
     <ClCompile Include="Game\Editor\paletteselector.cpp" />
     <ClCompile Include="Game\Editor\panelselector.cpp" />
+    <ClCompile Include="Game\Editor\zoneflags.cpp" />
     <ClCompile Include="Game\Entities\combatant.cpp" />
     <ClCompile Include="Game\Entities\combatantstate.cpp" />
     <ClCompile Include="Game\Entities\panel.cpp" />
@@ -208,6 +209,7 @@
     <ClInclude Include="Game\debugstage.h" />
     <ClInclude Include="Game\Editor\paletteselector.h" />
     <ClInclude Include="Game\Editor\panelselector.h" />
+    <ClInclude Include="Game\Editor\zoneflags.h" />
     <ClInclude Include="Game\Entities\combatant.h" />
     <ClInclude Include="Game\Entities\combatantstate.h" />
     <ClInclude Include="Game\Entities\panel.h" />
