--- a/JANE.v4.vcxproj.filters
+++ b/JANE.v4.vcxproj.filters
@@ -225,6 +225,9 @@
     <ClCompile Include="Game\Editor\zoneflags.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Game\gamestage.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Framework\framework.h">
@@ -465,6 +468,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Game\Editor\zoneflags.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Game\gamestage.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
